--- a/lang/src/en/chat.json
+++ b/lang/src/en/chat.json
@@ -23,6 +23,15 @@
         "Damage": "Damage",
         "Status": "Status",
         "Cost": "Cost"
+      },
+      "TargetsExhausted": {
+        "TargetsExhausted": "Targets Exhausted",
+        "TargetsExhaustedRepetition": "Repetition: {current}/{total}",
+        "TargetsExhaustedCompleted": "Completed: {completed}/{total}",
+        "TargetsExhaustedFailureTitle": "Execution Stopped",
+        "TargetsExhaustedFailureMessage": "None of the original targets still exist.",
+        "TargetsExhaustedTargetsRemoved": "Targets Removed: {names}",
+        "TargetsExhaustedNote": "Remaining repetitions were not executed."
       }
     }
   }
