Made sure selected status effects and transformations get passed via gm-control system from player action card execution.

--- a/lang/en.json
+++ b/lang/en.json
@@ -492,6 +492,7 @@
         "ActionCard": "Action Card",
         "Targets": "Targets",
         "NotOwned": "Not Owned",
+        "Transformations": "Transformation Selections",
         "RollFormula": "Roll Formula",
         "GMDecision": "GM Decision",
         "Approve": "Approve",
