--- a/lang/src/en/chat.json
+++ b/lang/src/en/chat.json
@@ -8,6 +8,7 @@
         "ActionCard": "Action Card",
         "Targets": "Targets",
         "NotOwned": "Not Owned",
+        "Transformations": "Transformation Selections",
         "RollFormula": "Roll Formula",
         "GMDecision": "GM Decision",
         "Approve": "Approve",
