Moved untranslated string to proper source and added source string.

--- a/lang/en.json
+++ b/lang/en.json
@@ -184,6 +184,7 @@
           }
         },
         "RepetitionCountAdjusted": "Repetition formula resulted in {originalCount}, adjusted to minimum of 1",
+        "NewGroupName": "Group {number}",
         "CreateNewPower": "Create New Power",
         "CreateNewStatus": "Create New Status",
         "RollValue": "Roll Value",
