--- a/lang/src/en/action-cards.json
+++ b/lang/src/en/action-cards.json
@@ -102,7 +102,8 @@
             "Message": "Unknown resource constraint preventing execution"
           }
         },
-        "RepetitionCountAdjusted": "Repetition formula resulted in {originalCount}, adjusted to minimum of 1"
+        "RepetitionCountAdjusted": "Repetition formula resulted in {originalCount}, adjusted to minimum of 1",
+        "NewGroupName": "Group {number}"
       }
     }
   }
